@@ -20,6 +20,7 @@ import pe.edu.pucp.inf.pddsbackend.simulador.eventos.EventoSimulacion;
 import java.time.Instant;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 /**
  * Evento que aplica los resultados de una planificación que se ejecutó de forma
@@ -330,10 +331,10 @@ Bitacora.escribir("============ FIN EVENTO APLICAR RESULTADO ============");
 
         productosBReales = productosReales.values().stream()
                 .filter(Producto::validarIncancelable_B)
-                .toList();
+                .collect(Collectors.toList());
         productosBPlanificacion = productosPlanificacion.values().stream()
                 .filter(Producto::validarIncancelable_B)
-                .toList();
+                .collect(Collectors.toList());
 
         // Vaciar la lista de productosProgramados de los pedidos
         ctx.getEstado().getPedidos().values().forEach(pedido -> {
